Added a theme.js for styling and made navigation a component

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,13 @@
 </head>
 
 <body>
+  <style>
+    body {
+      background-color: #eeeeee;
+    }
+  </style>
   <header>
-    <h1>Web Component Demo of a News Feed!</h1>
-    <p> News API Provided by: <a href="https://newsapi.org">newsapi.org</a> </p>
+    <navigation-component />
   </header>
 
   <main>
