Made news article cars responsive with breakpoints

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,16 @@
     body {
       background-color: #eeeeee;
     }
+
+    main {
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: space-around;
+    }
+
+    main news-article-card {
+      flex: 0 1 auto;
+    }
   </style>
   <header>
     <navigation-component />
